fine tune og images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
 <title>Elsa Rodriquez 🙏🏼</title>
-<meta name="description" content="Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Great-Grandmother, and friend ">
+<meta name="description" content="Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Grandmother, and friend ">
 <meta property="og:Elsa Rodriguez Memorial" content="Elsa Rodriquez Memorial Website">
 <meta name="author" content="Elsa Rodriquez Memorial">
 
@@ -22,7 +22,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Elsa Rodriquez Memorial Website">
  
-<meta property="og:description" content="Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Great-Grandmother, and friend ">
+<meta property="og:description" content="Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Grandmother, and friend ">
 <meta property="og:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Twitter Meta Tags -->
@@ -31,7 +31,7 @@
 <meta property="twitter:url" content="https://elsa.brainbuddys.com/">
 <meta name="twitter:title" content=" Elsa Rodriquez Memorial Website
 ">
-<meta name="twitter:description" content=" Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Great-Grandmother, and friend ">
+<meta name="twitter:description" content=" Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Grandmother, and friend ">
 <meta name="twitter:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
