--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
 
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
      <link rel="stylesheet" href="styles.css?v=1.0">
-      <script src="script.js?v=1.0"></script>
+      <script src="script.js?v=1.0"></script> -->
 
 <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
