--- a/indexREUSE.html
+++ b/indexREUSE.html
@@ -11,27 +11,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
 <title>Elsa Rodriquez 🙏🏼</title>
-<meta name="description" content="Happy Elsa  ">
-<meta property="og:Elsa At the Beach" content="About Elsa Rodriquez ">
-<meta name="author" content="Family">
+<meta name="description" content="Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Grandmother, and friend ">
+<meta property="og:Elsa Rodriguez Memorial" content="Elsa Rodriquez Memorial Website">
+<meta name="author" content="Elsa Rodriquez Memorial">
 
 
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://elsa.brainbuddys.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Elsa At the Beach">
+<meta property="og:title" content="Elsa Rodriquez Memorial Website">
  
-<meta property="og:description" content="Happy Elsa  ">
+<meta property="og:description" content="Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Grandmother, and friend ">
 <meta property="og:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="Elsa.BrainBuddys.com">
 <meta property="twitter:url" content="https://elsa.brainbuddys.com/">
-<meta name="twitter:title" content=" Elsa At the Beach
+<meta name="twitter:title" content=" Elsa Rodriquez Memorial Website
 ">
-<meta name="twitter:description" content="Elsa At the Beach ">
+<meta name="twitter:description" content=" Mrs. Elsa Rodriguez, a beloved mother, Great-Great-Grandmother, and friend ">
 <meta name="twitter:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
