--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
-<title>Elsa Rodriquez 🙏🏼</title>
-<meta name="description" content="Happy Elsa  ">
-<meta property="og:Elsa At the Beach" content="About Elsa Rodriquez ">
-<meta name="author" content="Family">
+<title>🙏🏼 💀 🙏🏼</title>
+<meta name="description" content=" Closed">
+<meta property="Not a good Idea " content="Family Prefers Privacy">
+<meta name="author" content="At the Beach">
 
 
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://elsa.brainbuddys.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Elsa At the Beach">
+<meta property="og:title" content="Closed, Family Prefers Privacy">
  
-<meta property="og:description" content="Happy Elsa  ">
+<meta property="og:description" content="Days at the Beach.">
 <meta property="og:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="Elsa.BrainBuddys.com">
 <meta property="twitter:url" content="https://elsa.brainbuddys.com/">
-<meta name="twitter:title" content=" Elsa At the Beach
+<meta name="twitter:title" content=" Closed, Family Prefers Privacy
 ">
-<meta name="twitter:description" content="Elsa At the Beach ">
+<meta name="twitter:description" content=" Family Does not want to be on the Internet.">
 <meta name="twitter:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
