--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://elsa.brainbuddys.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Closed, Family Prefers Privacy">
+<meta property="og:title" content="Elsa Rodriguez">
  
-<meta property="og:description" content="Days at the Beach.">
+<meta property="og:description" content="Memories of...">
 <meta property="og:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="Elsa.BrainBuddys.com">
 <meta property="twitter:url" content="https://elsa.brainbuddys.com/">
-<meta name="twitter:title" content=" Closed, Family Prefers Privacy
+<meta name="twitter:title" content=" IN Memory of Elsa Rodriguez
 ">
-<meta name="twitter:description" content=" Family Does not want to be on the Internet.">
+<meta name="twitter:description" content="In Memory of Elsa Rodriguez.">
 <meta name="twitter:image" content="https://images.brainbuddys.com/ogProtocol/1212x808Cross2.webp">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
