--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="preload" as="audio" href="https://images.brainbuddys.com/Sound/Mamacita-song_10.mp3" type="audio/mpeg">
+
+
+
     <!-- HTML Meta Tags -->
 <title>🙏🏼 💀 🙏🏼</title>
 <meta name="description" content=" Closed">
