I am making a fake cyber security download event thing to freak people out who enter the wrong password and shouldnt be there,   I have this subdomain so I am using the space to save a file ,  future sale to custmores stored in the repo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="preload" as="audio" href="https://images.brainbuddys.com/Sound/Mamacita-song_10.mp3" type="audio/mpeg">
-
-
+<meta name="google-site-verification" content="0nm9pxZd_zFa1XsJB2Mi4msS95V46ShscaTZBFTmHXM" />
+<meta name="keywords" content="memorial, funeral, tribute, remembrance, Elsa Rodriguez">
 
     <!-- HTML Meta Tags -->
 <title>🙏🏼 💀 🙏🏼</title>
