--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <link rel="stylesheet" href="styles.css?v=1.0">
       <script src="script.js?v=1.0"></script> -->
 
-<link rel="icon" href="./favicon.ico" type="image/x-icon" />
+<link rel="icon" href="./favicon.png
+" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="preload" as="video" href="https://images.brainbuddys.com/Videos/11-2-joypix_security_Goody.mp4" type="video/mp4">
 <meta name="google-site-verification" content="0nm9pxZd_zFa1XsJB2Mi4msS95V46ShscaTZBFTmHXM" />
