added a smiley and a safe react icon and words Safe and Secure.

--- a/index.html
+++ b/index.html
@@ -15,31 +15,10 @@
 <meta name="keywords" content="memorial, funeral, tribute, remembrance, Elsa Rodriguez">
 
     <!-- HTML Meta Tags -->
-<title>🙏🏼 💀 🙏🏼</title>
+<title>🕵️</title>
 <meta name="description" content=" Closed">
-<meta property="Not a good Idea " content="Family Prefers Privacy">
-<meta name="author" content="At the Beach">
-
-
-
-<!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://elsa.brainbuddys.com/">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Elsa Rodriguez">
- 
-<meta property="og:description" content="Memories of...">
-<meta property="og:image" content="https://images.brainbuddys.com/ogProtocol/zzzzzzzzz.webp">
-
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="Elsa.BrainBuddys.com">
-<meta property="twitter:url" content="https://elsa.brainbuddys.com/">
-<meta name="twitter:title" content=" IN Memory of Elsa Rodriguez
-">
-<meta name="twitter:description" content="In Memory of Elsa Rodriguez.">
-<meta name="twitter:image" content="https://images.brainbuddys.com/ogProtocol/zzzzzzzzz.webp">
-
-<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+<meta property="Closed " content="Closed">
+<meta name="author" content="">
 
 
   
