--- a/index.html
+++ b/index.html
@@ -9,17 +9,32 @@
 
 <link rel="icon" href="./favicon.png
 " type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preload" as="video" href="https://images.brainbuddys.com/Videos/11-2-joypix_security_Goody.mp4" type="video/mp4">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="google-site-verification" content="0nm9pxZd_zFa1XsJB2Mi4msS95V46ShscaTZBFTmHXM" />
 <meta name="keywords" content="memorial, funeral, tribute, remembrance, Elsa Rodriguez">
 
     <!-- HTML Meta Tags -->
 <title>🕵️</title>
+<!-- HTML Meta Tags -->
+<title>🕵️</title>
 <meta name="description" content=" Closed">
-<meta property="Closed " content="Closed">
-<meta name="author" content="">
 
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://elsa.brainbuddys.com/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="🕵️ Case Closed">
+<meta property="og:description" content=" Closed">
+<meta property="og:image" content="https://images.brainbuddys.com/ogProtocol/ogProtocol.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="elsa.brainbuddys.com">
+<meta property="twitter:url" content="https://elsa.brainbuddys.com/">
+<meta name="twitter:title" content="🕵️">
+<meta name="twitter:description" content=" Closed">
+<meta name="twitter:image" content="https://images.brainbuddys.com/ogProtocol/ogProtocol.jpg">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
   
   </head>
